fix: white space nowrap

--- a/src/assets/scss/modules/_widget-card.scss
+++ b/src/assets/scss/modules/_widget-card.scss
@@ -126,6 +126,7 @@
     h3 {
       overflow: hidden;
       text-overflow: ellipsis;
+      white-space: nowrap;
     }
 
     .dp-tooltip-top {
